--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Year Party 2026</title>
+    <title>New Year Party 2026 by Dome</title>
+    <meta name="description" content="มาร่วมสนุกกับปาร์ตี้ปีใหม่ จับของขวัญ และกิจกรรมสุดมันส์ คลิกเลย!" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://new-year-party-liard.vercel.app/" />
+    <meta property="og:title" content="New Year Party 2026 by Dome" />
+    <meta property="og:description" content="มาร่วมสนุกกับปาร์ตี้ปีใหม่ จับของขวัญ และกิจกรรมสุดมันส์ คลิกเลย!" />
+    <meta property="og:image" content="https://new-year-party-liard.vercel.app/og-image.png" />
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://new-year-party-liard.vercel.app/" />
+    <meta name="twitter:title" content="New Year Party 2026 by Dome" />
+    <meta name="twitter:description" content="มาร่วมสนุกกับปาร์ตี้ปีใหม่ จับของขวัญ และกิจกรรมสุดมันส์ คลิกเลย!" />
+    <meta name="twitter:image" content="https://new-year-party-liard.vercel.app/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
